gumball video IOS bug fix

--- a/style.css
+++ b/style.css
@@ -914,7 +914,7 @@ iframe {
     border-radius: 10px;
     margin: 40px 0;
     box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
-    object-fit: contain;
+    object-fit: cover;
 }
 
 /* Progress bar container */
