--- a/style.css
+++ b/style.css
@@ -47,8 +47,9 @@ body::-webkit-scrollbar {
 
 #header {
     width: 100%;
-    height: 85vh;
-    background-size: cover;
+    height: 80vh;
+    min-height: fit-content;
+    background-size: auto;
     background-position: center;
 }
 
@@ -373,7 +374,7 @@ strong {
 
 
 .sub-title {
-    font-size: 40px;
+    font-size: 60px;
     font-weight: 600;
     color:#fff;
 }
@@ -560,14 +561,11 @@ footer {
     flex-basis: 60%; /*60% of the row*/
 }
 
-.sub-title {
-    font-size: 60px;
-    font-weight: 600;
-    color:#fff;
-}
+
 
 .tab-titles {
     display: flex;
+    flex-wrap: wrap; /* Allow items to wrap on smaller screens */
     margin: 20px 0 40px; /*top 20px, bottom 0, left and right 40px from bottom*/
 }
 
@@ -1013,7 +1011,7 @@ canvas {
 }
 
 /* Next & previous buttons */
-  .prev, .next {
+.prev, .next {
     cursor: pointer;
     position: absolute;
     top: 50%;
@@ -1027,30 +1025,30 @@ canvas {
     transition: 0.6s ease;
     border-radius: 3px;
     user-select: none;
-  }
+}
   
   /* Position the "next button" to the right */
-  .next {
+.next {
     right: 0;
     left: auto;
     transform: translateY(-50%);
     border-radius: 3px 0 0 3px;
-  }
+}
 
-  .prev {
+.prev {
     left: 0;
     right: auto;
     transform: translateY(-50%);
     border-radius: 3px 0 0 3px;
-  }
+}
   
   /* On hover, add a black background color with a little bit see-through */
-  .prev:hover, .next:hover {
+.prev:hover, .next:hover {
     background-color: rgba(0,0,0,0.8);
-  }
+}
 
 
-  #gumball-caption {
+#gumball-caption {
     position: absolute;
     bottom: 10px;
     left: 50%;
@@ -1069,16 +1067,6 @@ canvas {
     font-size: 24px;
 }
 
-/*
-font-size: 16px;
-line-height: 30px;
-
-font-size: 16px;
-line-height: 28px;
-
-font-size: 20px;
-line-height: 36px;
-*/
 
 
 /* Media Queries */
@@ -1469,6 +1457,9 @@ nav .fa-solid {
     .work-list {
         grid-template-columns: repeat(2, 1fr); /* Two columns for tablets */
         grid-gap: 20px;
+        transition: none;
+        transform: none;
+        translate: none;
     }
 
     .work-content {
@@ -1598,6 +1589,12 @@ nav .fa-solid {
         margin: 0;
         font-size: 18px;
         text-align: left;
+    }
+
+    #header {
+        width: 100%;
+        height: 80vh;
+        background-position: center;
     }
 
     .header-text {
